found some more

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,7 @@ export(get_ndc)
 export(get_rxcui)
 export(get_specs)
 export(load_nis)
+export(medIQR)
+export(ndc10to11)
 export(query_fda)
+export(statsFac)
