--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(get_fda)
 export(get_ndc)
 export(get_rxcui)
 export(get_specs)
+export(icd10_convert)
+export(icd9_convert)
 export(load_nis)
 export(medIQR)
 export(ndc10to11)
