--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(children)
 export(codes_tab)
 export(extract_time)
+export(factorn)
 export(fill)
 export(get_fda)
 export(get_ndc)
@@ -12,6 +13,7 @@ export(icd10_convert)
 export(icd9_convert)
 export(load_nis)
 export(medIQR)
+export(mkorder)
 export(ndc10to11)
 export(query_fda)
 export(statsFac)
